cloudformation/network.yaml
# Network Infrastrcuture
AWSTemplateFormatVersion: "2010-09-09"
Description: CloudFormation configuration for creating network for capstone project

#########################
### Parameter Section ###
#########################
Parameters:
  EnvironmentName:
    Description: Environment Name for the infrastructure
    Type: String
  VpcCidrId:
    Description: VPC CIDR ID
    Type: String
  PublicSubnet1Cidr:
    Description: Public Subnet 1 CIDR
    Type: String
  PublicSubnet2Cidr:
    Description: Public Subnet 2 CIDR
    Type: String    

#########################
### Resources Section ###
#########################
Resources:
  # VPC #
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCidrId
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-VPC

  # Internet Gateway #
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-IGW

  # Internet Gateway Attachment to VPC #
  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  # Public Route Tables #
  PublicRouteTableAZ1:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-PublicRouteTableAZ1
      VpcId: !Ref VPC
  PublicRouteTableAZ2:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-PublicRouteTableAZ2
      VpcId: !Ref VPC
  # Public Routes #
  # Route all traffic to Internet Gateways #
  PublicSubnetAZ1Route:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
      RouteTableId: !Ref PublicRouteTableAZ1
  PublicSubnetAZ2Route:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
      RouteTableId: !Ref PublicRouteTableAZ2
  # Public Route Table association with Public Subnets #
  PublicSubnet1Association:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTableAZ1
      SubnetId: !Ref PublicSubnetAZ1
  PublicSubnet2Association:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTableAZ2
      SubnetId: !Ref PublicSubnetAZ2

  ## Subnets ##
  # Public Subnets #
  PublicSubnetAZ1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [0, !GetAZs ""]
      CidrBlock: !Ref PublicSubnet1Cidr
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-PublicSubnet1
      VpcId: !Ref VPC
  PublicSubnetAZ2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [1, !GetAZs ""]
      CidrBlock: !Ref PublicSubnet2Cidr
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-PublicSubnet2
      VpcId: !Ref VPC      

#######################
### Outputs Section ###
#######################
Outputs:
  VPC:
    Description: Reference for used VPC
    Value: !Ref VPC
    Export: 
      Name: !Sub ${EnvironmentName}-VpcId
  PublicSubnets:
    Description: List of Public subnets Ids 
    Value: !Join [ ",", [ !Ref PublicSubnetAZ1,  !Ref PublicSubnetAZ2 ] ]
    Export: 
      Name: !Sub "${EnvironmentName}-PublicSubnets"
  PublicSubnetAZ1:
    Description: Public Subnet in AZ1 
    Value: !Ref PublicSubnetAZ1
    Export: 
      Name: !Sub "${EnvironmentName}-PublicSubnetAZ1"
  PublicSubnetAZ2:
    Description: Public Subnet in AZ2 
    Value: !Ref PublicSubnetAZ2
    Export: 
      Name: !Sub "${EnvironmentName}-PublicSubnetAZ2"
